hwbi/disc/css/mainstyle.css
/* ... */
.logo {
  float: left;
  display: block;
  -webkit-transition: transform 0s;
  /* margin: 16px 0 0 36px; */
}

.logo img {
  display: block;
  width: 127px;
  margin-top: -23%;
  margin-left: 23%;
}

.sidenav {
  width: 195px;
  position: fixed;
  float: left;
  top: auto;
  min-height: 100vh;
  padding-top: 65px;
  background-color: #2c3136;
  z-index: 3;
  left: 0;
}

.sidenav > ul {
  padding: 0;
  list-style-type: none;
  margin-top: 15%;
}

.sidenav > ul > li:hover {
  background-color: #33383e;
}

.sidenav > ul > li > a {
  padding-top: 15px;
  padding-bottom: 15px;
}

.homeimg {
  width: 24px;
  position: absolute;
  left: 5%;
  top: 11%;
  opacity: 0.3;
}

.sidenav .active {
  box-shadow: inset 3px 0 0 #1784c7;
  background-color: #33383e;
}

.sidenav a {
  font-size: 13px;
  margin-left: 10%;
  display: block;
}

.sidenav-hr {
  margin: auto;
  margin-top: 10%;
  margin-bottom: 25%;
  width: 80%;
  background: #555;
}

.search {
  float: left;
  display: inline-block;
  width: 400px;
  height: 100%;
  margin: 0 0 0 4em;
}

.search-icon {
  position: absolute;
  width: 30px;
  top: 21px;
  left: 215px;
}

.search form,
.search input {
  height: 100%;
  width: 100vw;
}
.search input {
  border: none;
  padding-left: 1.6em;
  border-radius: 0;
  background-color: #3e454c;
  border-left: 1px solid #51575d;
  color: #ffffff;
}
.search input::-webkit-input-placeholder {
  color: #777c81;
}
.search input::-moz-placeholder {
  color: #777c81;
}
.search input:-moz-placeholder {
  color: #777c81;
}
.search input:-ms-input-placeholder {
  color: #777c81;
}

.search input:focus {
  outline: none;
  background-color: #3e454c;
}

.has-children > ul {
  position: relative;
  width: 100%;
  display: none;
  background-color: #1c1f22;
  list-style-type: none;
}

.has-children ul a {
  padding: 8%;
}

.submenu > li > a:hover {
  color: #1784c7;
}

.active-sub {
  color: #1784c7;
}

.has-children.selected > ul {
  display: block;
}

.has-children.active > ul {
  position: relative;
  display: block;
  /*reset style*/
  left: 0;
  box-shadow: none;
  padding: 0;
}

/* END TEMPLATE (MAINPAGE) */

.card {
  background: #fff;
  border-radius: 2px;
  display: inline-block;
  height: 300px;
  margin: 0.5%;
  /* margin-bottom: 3%; */
  position: relative;
  width: 100%;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
}

.card:hover {
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.card img {
  height: 100%;
  filter: brightness(40%);
  opacity: 0.9;

  width: 100%;
}

.card-list {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  grid-auto-rows: auto;
  grid-gap: 0.5rem;
  /* display: flex;
  flex-flow: wrap;
  justify-content: center; 
  justify-content: space-between; */
}

.card-list:after {
  content: "";
  display: table;
  clear: both;
}

.card-wrap {
  /* float: left;
  width: 25%;
  display: flex; */
  /* padding: 10px; */
  margin: 0.5%;

  /* flex: 0 1 250px; */
  /* margin: 0 auto; */

  /* justify-content: center; */
}

.card-text-overlay {
  color: white;
  font-weight: bold;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  font-size: 1.2em;
}

.services-card-list {
  width: 100%;
  /* display:flex; */
}

.services-card-wrap {
  /* float: left;
  width: 100%;
  padding: 10px;
  text-align: center; */
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  grid-auto-rows: auto;
  grid-gap: 0.5rem;
}

.service-card {
  background: #fff;
  border-radius: 2px;
  display: inline-block;
  height: 300px;
  margin: 0.5%;
  margin-bottom: 3%;
  position: relative;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
}

.service-card:hover {
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.service-card img {
  height: 100%;
  filter: brightness(40%);
  opacity: 0.9;
  width: 100%;
}

/* .modal{
  margin: 0;
  padding: 40px;
  background: white;
  border-radius: 3px;
  width: 79vw;
  position: absolute;
  top: 98px;
  left: 213px;
  height: 85%;
  box-shadow: 0 1px 16px rgba(0,0,0,0.12), 0 6px 10px rgba(0,0,0,0.24);
} */

.modal {
  margin: 0 auto;
  padding: 40px;
  background: white;
  border-radius: 3px;
  /* width: 80vw; */
  max-width: 1000px;
  position: absolute; /*rel*/
  /* top: 70px; */
  height: 100%; /*80vh*/
  /* box-shadow: 0 1px 16px rgba(0, 0, 0, 0.12), 0 6px 10px rgba(0, 0, 0, 0.24); */
  text-align: left;
}

.modal-active {
  visibility: visible !important;
  opacity: 1 !important;
}

.modal .close {
  position: absolute;
  top: 20px;
  right: 30px;
  font-size: 30px;
  font-weight: bold;
  text-decoration: none;
  color: #333;
}

.modal .customize-close {
  position: absolute;
  display: flex;
  top: 5px;
  left: 5px;
  width: 50px;
  height: 50px;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: #555; 
  font-size: 21px;
}

.close-container {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 5px;
  left: 5px;
  cursor: pointer;
}

.customize-close:hover {
  background: #0071bc;
  color: white;
}

/* .close-container:hover span {
  filter: invert(1);
  -webkit-filter: invert(100%);
} */

.modal p {
  padding-top: 2%;
  padding-bottom: 1%;
}

.modal h2 {
  /* font-family: Tahoma, Arial, sans-serif; */
  color: #333;
  margin-top: 15px;
}

.modal .modalcontent {
  max-height: 70%;
  overflow: auto;
}

#customize-domains-services .modal .modalcontent {
  padding-top: 2%;
}
/* ... */

